# pydantic2-settings-vault

./: AGENTS.md  CHANGELOG.md  Makefile  README.md  SPECS.md  justfile  mkdocs.yml  pyproject.toml
.cursor/rules/: documentation-required.mdc  feature-based-architecture.mdc  specs-format.mdc  test-coverage.mdc  use-justfile.mdc
.github/actions/checkout-sibling-deps/: action.yml
.github/actions/test/: action.yml
.github/workflows/: docs.yml  release.yml  test.yml  update-deps.yml
docs/: advanced-configuration.md  authentication.md  development.md  index.md  usage.md  vault-kv-and-policies.md
pydantic2-settings-vault/: __init__.py
pydantic2-settings-vault/old/: settings.py
pydantic2_settings_vault/: __init__.py
pydantic2_settings_vault/features/authentication/: __init__.py  backends.py  registry.py
pydantic2_settings_vault/features/settings_source/: __init__.py  cache.py  source.py  validation.py
pydantic2_settings_vault/shared/infrastructure/: kv_paths.py  vault_client_config.py  vault_http.py
test/: conftest.py  settings.py  test_http.py  test_settings.py
test/features/authentication/: test_backends.py
test/features/settings_source/: conftest.py  test_cache.py  test_client_config.py  test_settings.py  test_source.py  test_validation.py
test/features/shared/: test_kv_paths.py  test_vault_client_config.py  test_vault_http.py  vault_mocks.py
