[project]
name = "pydantic2-settings-vault"
version = "2.0.0"
description = "A Pydantic v2 settings extension for secure configuration management using HashiCorp Vault OpenSource (OSS) and Enterprise"
authors = [{name = "Sylvain Mouquet", email = "sylvain.mouquet@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.10.10",
    "certifi>=2025.1.31",
    "concurrency-limiter>=1.1.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "reattempt>=1.1.3",
]
license = { text = "MIT" }
url = "https://github.com/sylvainmouquet/pydantic2-settings-vault"
keywords = ["pydantic", "settings", "vault", "hashicorp", "configuration", "security", "secrets management", "python", "opensource", "enterprise"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
homepage = "https://github.com/sylvainmouquet/pydantic2-settings-vault"
documentation = "https://github.com/sylvainmouquet/pydantic2-settings-vault"
repository = "https://github.com/sylvainmouquet/pydantic2-settings-vault"
changelog = "https://github.com/sylvainmouquet/pydantic2-settings-vault/releases"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "anyio>=4.6.2.post1",
    "asyncpg>=0.30.0",
    "loguru>=0.7.2",
    "pip>=24.2",
    "pydocks>=1.2.0",
    "pycontainers",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "python-on-whales>=0.73.0",
    "ruff>=0.6.7",
]

[tool.uv.sources]
pydocks = { path = "../pydocks" }
pycontainers = { path = "../pycontainers" }

[tool.hatch.build.targets.wheel]
packages = ["pydantic2_settings_vault"]
